# ros2vlx

./: .gitignore  LICENSE  README.md  pyproject.toml  ros2_web_interface.py  ros2_web_service.py
agents/: ros2_agent.py
config/: logging_config.yaml  settings.py
scripts/: cli.py
tests/: test_ros2_tools.py
tools/: ros2_tools.py
utils/: chat_model.py  chat_model_factory.py  logger.py
utils/chat_models/: chat_azure.py  chat_nvidia.py  chat_openai.py
